# mytemplatefrompython

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: Example.yml  build.yml  release.yml
Example/: action.yml
project_name/: __init__.py  _version.py  my_module.py
test/unit/: conftest.py  test_my_module.py
