[metadata]
name = PROJECT_NAME_URL
version = 0.1.0
author = USERNAME
description = Your project description here
url = https://github.com/oneTakeda/PROJECT_NAME_URL
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
python_requires = >=3.8, <4

[options.packages.find]
exclude = examples; test

[options.entry_points]
console_scripts =
    PROJECT_NAME_URL=project_name.my_module:main

[options.extras_require]
dev =
    bandit == 1.7.*
    black >= 23,< 26
    build >= 0.10,< 1.3
    flake8 >= 6,< 8
    isort == 5.*
    mypy >= 1.5,< 1.14
    pre_commit == 4.1.0
    pytest >= 7,< 9
    pytest-cov >= 4,< 7
    setuptools >= 70.2.0,< 76
    twine >= 4,< 6

[options.package_data]
project_name = py.typed
